css add style global and for task-list

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Une liste de tâches créée dans le cadre de ma formation Bachelor Développeur d'application web.">
     <meta name="author" content="Raphaël Closson">
     <meta name="robots" content="index">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1 class="title">Liste de choses à faire</h1>
@@ -21,7 +22,7 @@
         </ul>
         <form action="">
             <input type="text" class="new list" placeholder="Nouvelle liste" aria-label="Nouvelle liste">
-            <button class="btn list" aria-label="Créer nouvelle liste">+</button>
+            <button class="btn create" aria-label="Créer nouvelle liste">+</button>
         </form>
     </div>
 
@@ -64,8 +65,8 @@
 
             <div class="new-task-creator">
                 <form action="">
-                    <input type="text" class="new list" placeholder="Nouvelle tâche" aria-label="Nouvelle tâche">
-                    <button class="btn task" aria-label="Créer nouvelle tâche">+</button>
+                    <input type="text" class="new task" placeholder="Nouvelle tâche" aria-label="Nouvelle tâche">
+                    <button class="btn create" aria-label="Créer nouvelle tâche">+</button>
                 </form>
             </div>
 
