--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="all-tasks">
         <h2 class="task-list-title">Mes listes</h2>
         <ul class="task-list">
-            <li class="active-list">Youtube</li>
-            <li>Work</li>
-            <li>Grocery</li>
+            <li class="list-name active-list">Youtube</li>
+            <li class="list-name " >Work</li>
+            <li class="list-name " >Grocery</li>
         </ul>
         <form action="">
             <input type="text" class="new list" placeholder="Nouvelle liste" aria-label="Nouvelle liste">
