--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo List | Raphaël Closson</title>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;700;900&display=swap" rel="stylesheet">
     <meta name="description" content="Une liste de tâches créée dans le cadre de ma formation Bachelor Développeur d'application web.">
     <meta name="author" content="Raphaël Closson">
     <meta name="robots" content="index">
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/script.js"></script>
 </head>
 <body>
     <h1 class="title">Liste de choses à faire</h1>
 
     <div class="all-tasks">
         <h2 class="task-list-title">Mes listes</h2>
-        <ul class="task-list">
-            <li class="list-name active-list">Youtube</li>
+        <ul class="task-list" data-lists>
+            <!-- <li class="list-name active-list">Youtube</li>
             <li class="list-name " >Work</li>
-            <li class="list-name " >Grocery</li>
+            <li class="list-name " >Grocery</li> -->
         </ul>
-        <form action="">
-            <input type="text" class="new list" placeholder="Nouvelle liste" aria-label="Nouvelle liste">
+        <form action="" data-new-list-form>
+            <input type="text" class="new list" data-new-list-input placeholder="Nouvelle liste" aria-label="Nouvelle liste">
             <button class="btn create" aria-label="Créer nouvelle liste">+</button>
         </form>
     </div>
