js update - listes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <div class="delete-stuff">
                 <button class="btn delete">Nettoyer la liste</button>
-                <button class="btn delete">Supprimer la liste</button>
+                <button class="btn delete" data-delete-list-button>Supprimer la liste</button>
             </div>
 
         </div>
