--- a/index.html
+++ b/index.html
@@ -17,67 +17,43 @@
 
     <div class="all-tasks">
         <h2 class="task-list-title">Mes listes</h2>
-        <ul class="task-list" data-lists>
-            <!-- <li class="list-name active-list">Youtube</li>
-            <li class="list-name " >Work</li>
-            <li class="list-name " >Grocery</li> -->
-        </ul>
+        <ul class="task-list" data-lists></ul>
         <form action="" data-new-list-form>
             <input type="text" class="new list" data-new-list-input placeholder="Nouvelle liste" aria-label="Nouvelle liste">
             <button class="btn create" aria-label="Créer nouvelle liste">+</button>
         </form>
     </div>
 
-    <div class="todo-list">
+    <div class="todo-list" data-list-display-container>
         <div class="todo-header">
-            <h2 class="list-title">Youtube</h2>
-            <p class="task-count">3 tâches restantes</p>
+            <h2 class="list-title" data-list-title>Youtube</h2>
+            <p class="task-count" data-list-count>3 tâches restantes</p>
         </div>
 
         <div class="todo-body">
-            <div class="tasks">
-
-                <div class="task">
-                    <input type="checkbox" id="task-1">
-                    <label for="task-1">
-                        <span class="custom-checkbox"></span>
-                        faire une liste de tâches
-                    </label>
-                </div>
-                <!-- Task 1 -->
-
-                <div class="task">
-                    <input type="checkbox" id="task-2">
-                    <label for="task-2">
-                        <span class="custom-checkbox"></span>
-                        deuxième tâche
-                    </label>
-                </div>
-                <!-- Task 2 -->
-
-                <div class="task">
-                    <input type="checkbox" id="task-3">
-                    <label for="task-3">
-                        <span class="custom-checkbox"></span>
-                        une troisième !
-                    </label>
-                </div>
-                <!-- Task 3 -->
-            </div>
+            <div class="tasks" data-tasks></div>
 
             <div class="new-task-creator">
-                <form action="">
-                    <input type="text" class="new task" placeholder="Nouvelle tâche" aria-label="Nouvelle tâche">
+                <form action="" data-new-task-form>
+                    <input type="text" data-new-task-input class="new task" placeholder="Nouvelle tâche" aria-label="Nouvelle tâche">
                     <button class="btn create" aria-label="Créer nouvelle tâche">+</button>
                 </form>
             </div>
 
             <div class="delete-stuff">
-                <button class="btn delete">Nettoyer la liste</button>
+                <button class="btn delete" data-clear-complete-tasks-button>Nettoyer la liste</button>
                 <button class="btn delete" data-delete-list-button>Supprimer la liste</button>
             </div>
 
         </div>
     </div>
+    <template id="task-template">
+        <div class="task">
+            <input type="checkbox">
+            <label>
+                <span class="custom-checkbox"></span>
+            </label>
+        </div>
+    </template>
 </body>
 </html>
